add date-group class to settings header for better grouping and styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -587,7 +587,7 @@
         </div>
 
         <div class="settings-container date-group">
-            <div class="group-header" onclick="toggleGroup('settings')">
+            <div class="group-header date-group" onclick="toggleGroup('settings')">
                 <h3>
                     <span class="expand-icon" id="icon-settings">▶</span>
                     Настройки
