add group member input and update volume settings heading

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                         </label>
                     </div>
 
-                    <h3>Настройки громкости</h3>
+                    <h3>Корректировка громкости</h3>
                     <div class="form-group slider-group">
                         <label for="mic-volume">Громкость микрофона: <span id="mic-volume-value"></span> dB</label>
                         <input type="range" id="mic-volume" name="mic_volume_adjustment" min="-20" max="20" step="1" value="-3">
