--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,7 @@ h1, h2, h3, h4 {
     display: flex;
     align-items: center;
     gap: 10px;
+    justify-content: space-between; /* Размещаем элементы по краям */
 }
 
 .contact-group-name { margin: 0; }
