add click handler to group counter to toggle collapse state

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,6 +192,7 @@ h1, h2, h3, h4 {
     font-size: 0.9em;
     color: #7f8c8d;
     white-space: nowrap; /* Чтобы текст не переносился */
+    cursor: pointer; /* Указываем, что по счетчику можно кликнуть */
 }
 
 /* Стили для label в заголовке группы, аналогично label участника */
