refactor: replace form submit with direct setting save and enable auto-save on input changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,9 +97,8 @@
                         <input type="range" id="sys-audio-volume" name="system_audio_volume_adjustment" min="-20" max="20" step="1" value="0">
                     </div>
 
-                    <button type="submit" class="submit-btn">Сохранить настройки</button>
-                    <div id="settings-save-status"></div>
                 </form>
+                <div id="settings-save-status" style="margin-top: 15px;"></div>
             </div>
 
             <div id="contacts-tab" class="tab-content">
