feat: add selected contacts count display in contacts tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <div class="tabs">
                 <button class="tab-link active" data-tab="recordings-tab">Записи</button>
                 <button class="tab-link" data-tab="settings-tab">Настройки</button>
-                <button class="tab-link" data-tab="contacts-tab">Участники</button>
+                <button class="tab-link" data-tab="contacts-tab">Участники <span id="selected-contacts-count"></span></button>
             </div>
 
             <div id="recordings-tab" class="tab-content active">
