--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
     <title>ChroniqueX Record Server</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link id="favicon" rel="icon" href="/favicon.ico" type="image/x-icon">
+    <style>
+        html {
+            overflow-y: scroll;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -73,27 +78,27 @@
                         </label>
                     </div>
                     <div class="form-group">
-                        <label for="prompt-addition">Дополнение к промпту:</label>
-                        <div class="prompt-info">
-                            <p>Доступные плейсхолдеры: <code>{current_date}</code> - текущая дата.</p>
-                            <p>Строки, начинающиеся с <code>//</code>, будут проигнорированы.</p>
-                        </div>
-                        <textarea id="prompt-addition" name="prompt_addition" rows="8"></textarea>
-                    </div>
-                    <div class="form-group">
                         <label for="include-html-files">
                             <input type="checkbox" id="include-html-files" name="include_html_files">
                             Добавлять HTML файлы из папки с записью в контекст
                         </label>
                     </div>
+                    <div class="form-group">
+                        <label for="prompt-addition">Дополнение к промпту:</label>
+                        <div class="prompt-info">
+                            <p>Доступные плейсхолдеры: <code>{current_date}</code> - текущая дата.</p>
+                            <p>Строки, начинающиеся с <code>//</code>, будут проигнорированы.</p>
+                        </div>
+                        <textarea id="prompt-addition" name="prompt_addition" rows="20"></textarea>
+                    </div>
 
                     <h3>Корректировка громкости</h3>
                     <div class="form-group slider-group">
-                        <label for="mic-volume">Громкость микрофона: <span id="mic-volume-value"></span> dB</label>
+                        <label for="mic-volume">Микрофона: <span id="mic-volume-value"></span> dB</label>
                         <input type="range" id="mic-volume" name="mic_volume_adjustment" min="-20" max="20" step="1" value="-3">
                     </div>
                     <div class="form-group slider-group">
-                        <label for="sys-audio-volume">Громкость системного аудио: <span id="sys-audio-volume-value"></span> dB</label>
+                        <label for="sys-audio-volume">Системного аудио: <span id="sys-audio-volume-value"></span> dB</label>
                         <input type="range" id="sys-audio-volume" name="system_audio_volume_adjustment" min="-20" max="20" step="1" value="0">
                     </div>
 
