--- a/templates/index.html
+++ b/templates/index.html
@@ -31,15 +31,12 @@
         </div>
 
         <div class="volume-meters-container">
-            <div class="volume-meter">
-                <label for="mic-volume">Микрофон: <span id="mic-volume-value"></span> dB</label>
-                <div class="meter-bar-container"><div id="mic-level-bar" class="meter-bar"></div></div>
-                <input type="range" id="mic-volume" name="mic_volume_adjustment" min="-20" max="20" step="1" value="-3">
-            </div>
-            <div class="volume-meter">
-                <label for="sys-audio-volume">Системное аудио: <span id="sys-audio-volume-value"></span> dB</label>
-                <div class="meter-bar-container"><div id="sys-level-bar" class="meter-bar"></div></div>
-                <input type="range" id="sys-audio-volume" name="system_audio_volume_adjustment" min="-20" max="20" step="1" value="0">
+            <div class="volume-chart">
+                <canvas id="audio-chart" width="600" height="100"></canvas>
+                <div class="chart-legend">
+                    <span class="legend-item mic"><span class="legend-color"></span>Микрофон</span>
+                    <span class="legend-item sys"><span class="legend-color"></span>Системное аудио</span>
+                </div>
             </div>
         </div>
         
