--- a/static/css/style.css
+++ b/static/css/style.css
@@ -469,6 +469,7 @@ input[type="text"], input[type="number"], textarea {
 .volume-chart {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 5px;
 }
 
